[tool.poetry]
name = "kan"
version = "0.1.0"
description = ""
authors = ["Theo Wolf <theo@carbonre.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pykan = "^0.0.2"
matplotlib= "3.6.2"
numpy = "1.24.4"
scikit_learn = "1.1.3"
setuptools = "65.5.0"
sympy = "1.11.1"
torch = "2.2.2"
tqdm = "4.66.2"
jupyter = "^1.0.0"
lab = "^8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
